# PyCon22

./: .gitignore  Makefile  README.md  genetic_algorithm.ipynb  n_queens_solver.py  pyproject.toml  queens_gambit.py
src/exercises/: exercise.py  text.md
src/genetic_algorithm/: algorithm.py  n_queens_solver.py  utils.py
